# SDDB

./: .gitignore  DBDiscord.py  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
DatabaseDiscord/: __init__.py
SDDB/: DatabaseDiscord.py  __init__.py
