[metadata]
name = DBDiscord
version = 0.0.1
author = Kelzorz
author_email = 43789359+Kelzorz@users.noreply.github.com
description = Using Discord as a simple database
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Kelzorz/DBDiscord
project_urls =
    Bug Tracker = https://github.com/Kelzorz/DBDiscord/issues
classifiers =
    Programming Language :: Python :: 3
    License :: BEERWARE
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Database

[options]
packages = find:
install_requires = discord
python_requires = >=3.5.3